# drone_tuwaiq

./: README.md  list.txt  package.xml  setup.py
code/: code.py  drone_cli.py  drone_controller.py
drone_tuwaiq/: command_interface.py  drone_controller.py  gimbal_yolo_node.py
launch/: bridge.txt  drone_tuwaiq.launch.py  notes.txt
models/x500_lidar_camera/: model.sdf
px4/: 4021_gz_x500_lidar_camera
world/: baylands.sdf  default.sdf
